# tg_llm_db

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.ipynb  test_openrouter.py
.github/workflows/: ci-cd.yml
deploy/: telegram-bot.service
monitoring/: prometheus.yml
src/bot/: config.py  main.py
src/bot/database/: database.py
src/bot/handlers/: __init__.py  callbacks.py  commands.py  messages.py
src/bot/keyboards/: inline.py
src/bot/middlewares/: __init__.py  auth.py  logging.py  throttling.py
src/bot/services/: context.py  external_apis.py  llm.py  openrouter.py
src/monitoring/: health.py  metrics.py
