[tool.poetry]
name = "telegram-llm-bot"
version = "0.1.0"
description = "Modern Telegram bot with LLM integration via OpenRouter"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.21.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
loguru = "^0.7.2"
prometheus-client = "^0.20.0"
celery = "^5.3.0"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
docker-compose = "^1.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_unreachable = true